--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-# student-site
+# TeamINTERNETBOIS_Restaurant
 
 
-Yo, this is my page. I am using GitHub Desktop and Visual Studio Code to work on this project. Future Brian, this is present Brian - don't mess this up.
+Yo, this is my page. I am using GitHub Desktop and Visual Studio Code to work on this project. We about to make a Restaurant Page!
 
 
 
-An example student website, hosted by [GitHub Pages](https://pages.github.com/).
+A Menu, hosted by [GitHub Pages](https://pages.github.com/).
 
 View live in production at https://prof-rossetti.github.io/student-site.
 
